<resources>
    <string name="app_name">WelcomeActivity</string>
    <string name="background_image">background_image</string>
    <string name="next">NEXT</string>
    <string name="app_logo">app_logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">MENS</string>
    <string name="women">WOMEN</string>
    <string name="mixed">MIXED</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_a_team_in_your_city_and_dominate_the_field">Find a team in your City and dominate the field!
    </string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="i_am_a">I am a:</string>
    <string name="finish">FINISH</string>
</resources>
