<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.leagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/button" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat" android:textStyle="bold" android:textSize="18sp"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:onClick="leagueNextClicked"/>
    <ImageView
            android:layout_width="116dp"
            android:layout_height="39dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp"
            android:scaleType="fitCenter" android:contentDescription="@string/app_logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/white" android:textSize="20sp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:id="@+id/linearLayout">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:layout_editor_absoluteY="262dp"
                tools:layout_editor_absoluteX="161dp" android:id="@+id/mensLeagueBttm" android:textOff="@string/mens"
                android:textOn="@string/mens" android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textSize="18sp" android:textStyle="bold" android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/women"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensLeagueBttm"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" android:textOff="@string/women" android:textOn="@string/women"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textSize="18sp" android:fontFamily="@font/montserrat" android:textStyle="bold"
                android:onClick="onWomensClicked"/>
        <ToggleButton
                android:text="@string/mixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mixedButton" android:textOff="@string/mixed"
                android:textOn="@string/mixed" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:textSize="18sp" android:fontFamily="@font/montserrat"
                android:textStyle="bold" android:onClick="onMixedClicked"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>