<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="116dp"
            android:layout_height="39dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="148dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="147dp" app:layout_constraintHorizontal_bias="0.5"
            android:scaleType="fitCenter" android:contentDescription="@string/app_logo"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginTop="46dp" app:layout_constraintTop_toBottomOf="@+id/textView6">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerSkillBtn" android:layout_weight="1"
                android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:layout_marginEnd="16dp" android:textSize="16sp"
                android:fontFamily="@font/montserrat" android:onClick="onBeginnerClicked"/>
        <ToggleButton
                android:text="@string/baller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerSkillBtn" android:layout_weight="1"
                android:textOff="@string/baller" android:textOn="@string/baller"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:layout_marginStart="16dp" android:textSize="16sp"
                android:fontFamily="@font/montserrat" android:onClick="onBallerClick"/>
    </LinearLayout>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:fontFamily="@font/montserrat"
            android:textSize="14sp" android:textColor="@android:color/white" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:id="@+id/onSkillFinischedBtn" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:fontFamily="@font/montserrat" android:textStyle="bold" android:textSize="18sp"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:onClick="onSkillFinishClicked"/>

</android.support.constraint.ConstraintLayout>